--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "fusion-plugin-styletron-react": "^2.5.4",
     "fusion-react": "^1.3.4",
     "fusion-tokens": "^1.1.1",
+    "nebula.gl-react": "^0.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-map-gl": "^4.0.10",
     "styletron-react": "^4.3.6"
   },
   "scripts": {
