--- a/package.json
+++ b/package.json
@@ -26,5 +26,14 @@
   },
   "devDependencies": {
     "enzyme": "^3.7.0"
+  },
+  "resolutions": {
+    "@turf/bbox": "^5.1.5",
+    "@turf/bbox-polygon": "^5.1.5",
+    "@turf/buffer": "^5.1.5",
+    "@turf/circle": "^5.1.5",
+    "@turf/difference": "^5.1.5",
+    "@turf/distance": "^5.1.5",
+    "@turf/helpers": "^5.1.5"
   }
 }
